--- a/i18n/strings_en.json
+++ b/i18n/strings_en.json
@@ -15,12 +15,18 @@
   "CONFIG": {
     "TITLE": "Podcast Configuration",
     "PODCAST": "Podcast",
+    "PODCAST_NAME": "Podcast Name",
     "LIST_PODCAST": "podcasts",
     "DELETE_PODCAST": "delete podcast",
     "REGISTER_PODCAST": "register podcast",
     "ADD_PODCAST": "add podcast",
     "ADD_PODCAST_NOTE": "Note: http(s) podcast RSS feed url",
     "DELETE_PODCAST_DESCRIPTION": "Select podcast to delete from podcasts",
-    "ADD_PODCAST_DESCRIPTION": "Type podcast RSS feed link url"
+    "ADD_PODCAST_DESCRIPTION": "Type podcast RSS feed link url",
+    "SEARCH_PODCAST": "search podcast",
+    "SEARCH_ADD_PODCAST": "search and add podcast",
+    "SEARCH_PODCAST_DESCRIPTION": "Type podcast name to search",
+    "SEARCH_PODCAST_NOTE": "Search Note",
+    "SEARCH_LIST_PODCAST": "search result"
   }
 }
