--- a/i18n/strings_ko.json
+++ b/i18n/strings_ko.json
@@ -15,12 +15,18 @@
   "CONFIG": {
     "TITLE": "팟캐스트 설정",
     "PODCAST": "팟캐스트",
+    "PODCAST_NAME": "팟캐스트 이름",
     "LIST_PODCAST": "팟캐스트 리스트",
     "DELETE_PODCAST": "팟캐스트 삭제",
     "REGISTER_PODCAST": "팟캐스트 등록",
     "ADD_PODCAST": "팟캐스트 추가",
     "ADD_PODCAST_NOTE": "참고: http(s) RSS 팟캐스트 주소 입력",
     "DELETE_PODCAST_DESCRIPTION": "팟캐스트 리스트에서 삭제할 팟캐스트 항목을 선택하세요.",
-    "ADD_PODCAST_DESCRIPTION": "추가할 팟캐스트 RSS 연결 url을 입력하여 주세요."
+    "ADD_PODCAST_DESCRIPTION": "추가할 팟캐스트 RSS 연결 url을 입력하여 주세요.",
+    "SEARCH_PODCAST": "팟캐스트 검색",
+    "SEARCH_ADD_PODCAST": "팟캐스트 검색 및 등록",
+    "SEARCH_PODCAST_DESCRIPTION": "검색할 팟캐스트명 입력",
+    "SEARCH_PODCAST_NOTE": "검색 노트",
+    "SEARCH_LIST_PODCAST": "검색 결과"
   }
 }
