--- a/i18n/strings_ko.json
+++ b/i18n/strings_ko.json
@@ -37,8 +37,9 @@
     "ADD_PODCAST_DESCRIPTION": "추가할 팟캐스트 RSS 연결 url을 입력하여 주세요.",
     "SEARCH_PODCAST": "팟캐스트 검색",
     "SEARCH_ADD_RESULT_PODCAST": "검색결과 등록",
-    "SEARCH_PODCAST_DESCRIPTION": "검색할 팟캐스트명 입력",
+    "SEARCH_PODCAST_DESCRIPTION": "검색할 팟캐스트명 입력을 입력하세요",
     "SEARCH_PODCAST_NOTE": "Gpoddernet 팟캐스트 메타 정보 사용",
-    "SEARCH_LIST_PODCAST": "검색 결과"
+    "SEARCH_RESULT_PODCAST": "팟캐스트 검색 결과",
+    "SEARCH_LIST_PODCAST": "결과 목록"
   }
 }
